aaum/ArmTemplates/NetworkOnboarding-USGov.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "deployAzureBastion": {
            "type": "bool",
            "defaultValue": true
        }
    },
    "variables": {  
        "virtualNetworkName": "PoC-AAUM-Network",
        "subnetName": "PoC-AAUM-VMS-Subnet01",
        "bastionPIPName": "PoC-AAUM-Bastion-PIP",
        "bastionSubnetName":"AzureBastionSubnet",
        "bastionName":"PoC-AAUM-BastionHost",
        "addressPrefixes":"192.168.0.0/23",
        "bastionSubnetAddressPrefix":"192.168.0.0/27",
        "vmsSubnetaddressPrefix": "192.168.0.32/27",
        "bastionNSG": "PoC-AAUM-BastionHost-NSG"
    },
    "resources": [
    {
            "condition":"[parameters('deployAzureBastion')]",
            "apiVersion": "2019-11-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('bastionNSG')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "bastion-in-allow",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "bastion-control-in-allow",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "GatewayManager",
                            "destinationPortRanges": [
                                "443",
                                "4443"
                            ],
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "bastion-in-deny",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 900,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "bastion-vnet-out-allow",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRanges": [
                                "22",
                                "3389"
                            ],
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "bastion-azure-out-allow",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
     },
     {
            "name": "[variables('virtualNetworkName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "[variables('virtualNetworkName')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefixes')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('bastionSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('bastionSubnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('bastionNSG'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('vmsSubnetaddressPrefix')]"
                           
                        }
                    }
                ]
            }
        },
            {
            "apiVersion": "2019-02-01",
            "condition": "[parameters('deployAzureBastion')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('bastionPIPName')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "apiVersion": "2019-12-01",
            "condition": "[parameters('deployAzureBastion')]",
            "type": "Microsoft.Network/bastionHosts",
            "name": "[variables('bastionName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIpAddresses', variables('bastionPIPName'))]",
                 "[variables('virtualNetworkName')]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "IpConf",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId(resourceGroup().name,'Microsoft.Network/virtualNetworks/subnets',variables('virtualNetworkName'),variables('bastionSubnetName'))]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('bastionPIPName'))]"
                            }
                        }
                    }
                ]
            },
            "tags": {}
        }
    ],
    "outputs": {}
}
