aaum/ArmTemplates/NetworkOnboarding.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "deployAzureBastion": {
            "type": "bool",
            "defaultValue": true
        }
    },
    "variables": {  

        "resourceGroupValues":"[split(resourceGroup().name,'-')]",
        "uniqueValue":"[variables('resourceGroupValues')[3]]",
        "virtualNetworkName": "[concat('PoC-AAUM-Network-',variables('uniqueValue'))]",
        "subnetName": "PoC-AAUM-VMS-Subnet01",
        "bastionPIPName": "[concat('PoC-AAUM-Bastion-PIP-',variables('uniqueValue'))]",
        "bastionSubnetName":"AzureBastionSubnet",
        "bastionName":"[concat('PoC-AAUM-BastionHost-',variables('uniqueValue'))]",
        "bastionNSG": "[concat('PoC-AAUM-BastionHost-NSG-',variables('uniqueValue'))]",
        "vmSubnetNSG": "[concat('PoC-AAUM-VMSubnet-NSG-',variables('uniqueValue'))]",
        "addressPrefixes":"192.168.0.0/23",
        "bastionSubnetAddressPrefix":"192.168.0.0/27",
        "vmsSubnetaddressPrefix": "192.168.0.32/27"   
    },
    "resources": [
    {
            "condition":"[parameters('deployAzureBastion')]",
            "apiVersion": "2019-11-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('bastionNSG')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowHttpsInbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "Internet",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowGatewayManagerInbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "GatewayManager",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowBastionCommunicationInbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationPortRanges":[
                                "8080",
                                "5701"
                            ],
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 130,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowSshRdpOutbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRanges": [
                                "22",
                                "3389"
                            ],
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "AllowAzureCloudOutbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "destinationAddressPrefix": "AzureCloud",
                            "access": "Allow",
                            "priority": 110,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "AllowBastionCommunicationOutbound",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationPortRanges": [
                                "8080",
                                "5701"
                            ],
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 120,
                            "direction": "Outbound"
                        }
                    }
                    
                ]
            }
     },
     {
         "name": "[variables('vmSubnetNSG')]",
         "type": "Microsoft.Network/networkSecurityGroups",
         "apiVersion": "2019-11-01",
         "location": "[resourceGroup().location]",
         "properties": {
             "securityRules": [
                 {
                     "name": "AllowSshRdpInbound",
                     "properties": {
                         "description": "description",
                         "protocol": "Tcp",
                         "sourcePortRange":"*",
                         "destinationPortRanges":[
                                "22",
                                "3389"
                            ],
                         "sourceAddressPrefix": "[variables('bastionSubnetAddressPrefix')]",
                         "destinationAddressPrefix": "*",
                         "access": "Allow",
                         "priority": 100,
                         "direction": "Inbound"
                     }
                 }
             ]
         }
     },
     {
            "name": "[variables('virtualNetworkName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups/',variables('bastionNSG') )]",
                "[resourceId('Microsoft.Network/networkSecurityGroups/',variables('vmSubnetNSG') )]"
            ],
            "tags": {
                "displayName": "[variables('virtualNetworkName')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefixes')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('bastionSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('bastionSubnetAddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('bastionNSG'))]"
                            }
                        }
                    },
                    {
                        "name": "[variables('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('vmsSubnetaddressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('vmSubnetNSG'))]"
                            }
                           
                        }
                    }
                ]
            }
        },
            {
            "apiVersion": "2019-02-01",
            "condition": "[parameters('deployAzureBastion')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('bastionPIPName')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "apiVersion": "2019-12-01",
            "condition": "[parameters('deployAzureBastion')]",
            "type": "Microsoft.Network/bastionHosts",
            "name": "[variables('bastionName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIpAddresses', variables('bastionPIPName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "IpConf",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId(resourceGroup().name,'Microsoft.Network/virtualNetworks/subnets',variables('virtualNetworkName'),variables('bastionSubnetName'))]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('bastionPIPName'))]"
                            }
                        }
                    }
                ]
            },
            "tags": {}
        }
    ],
    "outputs": {}
}
